[Bug #21528] Try to produce strings with valid encoding when truncating syntax errors